Changelog
---------

Version 2.6.1
~~~~~~~~~~~~~

* Fixing #62 VP9 and GIF crashing due to label bug (thanks to -L0Lock-)

Version 2.6.0
~~~~~~~~~~~~~

* Adding AV1 AOM settings for cpu-used, tile-columns, tile-rows, row-mt
* Adding HEVC x265 setting for profile
* Changing plugins to include library used for encoding
* Changing HEVC default speed to "medium" and crf to 28 to match x265 defaults
* Changing command builders to specify stream instead of video track for codec
* Fixing FPS not showing correctly when dealing with higher numbers
* Fixing #60 video track not selected properly (thanks to -L0Lock-)
* Fixing crash on SVT-AV1 due to HDR label issue
* Fixing SVT-AV1 audio tracks being converted incorrectly

Version 2.5.0
~~~~~~~~~~~~~

* Adding settings dialog
* Fixing no bitrate should be specified for lossless audio

Version 2.4.1
~~~~~~~~~~~~~

* Fixing #52 HEVC custom CRF issue (thanks to 2600box)

Version 2.4.0
~~~~~~~~~~~~~

* Adding larger command line view to see entire command at once
* Changing to using qtpy which supports dynamic linking of either PySide2 or pyqt5, instead of only PySide2
* Fixing #4 Error Message Box when someone other than video file is dropped onto fastflix
* Fixing #44 Remove metadata from original file (thanks to HannesJo0139)
* Fixing #20 Adding hoverhelp for most converter options

Version 2.3.4
~~~~~~~~~~~~~

* Fixing audio downmixing only taking for last downmixing setting

Version 2.3.3
~~~~~~~~~~~~~

* Fixing #46 max-cll was being sent incorrectly to x265-params (thanks to HannesJo0139)
* Fixing #43 audio bitrate being set to wrong track (thanks to HannesJo0139)

Version 2.3.2
~~~~~~~~~~~~~

* Fixing #39 HEVC two pass bitrate does not work (thanks to schlotkins)


Version 2.3.1
~~~~~~~~~~~~~

* Fixing #35 custom CRF / bitrate values not updating in the command panel (thanks to schlotkins)

Version 2.3.0
~~~~~~~~~~~~~

* Adding to pypi
* Changing package to "fastflix"